<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GameMaker!</string>
    <string name="app_name">GameMaker</string>
    <string name="newgame">New Game</string>
    <string name="select">Select a map:</string>
    <string name="play">Play</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="actorName">Name:</string>
    <string name="actors">Actors</string>
    <string name="reset">Reset</string>
    <string name="resize">Resize Group</string>
    <string name="ok">Ok</string>
    <string name="actorImage">Image:</string>
    <string name="speed">Speed:</string>
    <string name="editActor">Edit Actor</string>
    <string name="jumpSpeed">Jump Speed</string>
    <string name="cancel">Cancel</string>
    <string name="switchName">Switch Name:</string>
    <string name="defaultValue">Default Value:</string>
    <string name="variableName">Variable Name</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="switchId">Switch Id:</string>
    <string name="events">Events</string>
    <string name="new_">New</string>
    <string name="editEvent">Edit Event</string>
    <string name="triggers">Triggers:</string>
    <string name="actions">Actions:</string>
    <string name="name">Name:</string>
    <string name="newTrigger">New Trigger</string>
    <string name="newAction">New Action</string>
    <string name="eventTriggeredWhen">The event is triggered when:</string>
    <string name="becomes">becomes</string>
    <string name="turns">turns</string>
    <string name="editVariableTrigger">Edit Variable Trigger</string>
    <string name="editSwitchTrigger">Edit Switch Trigger</string>
    <string name="is">is</string>
    <string name="theValue">the value</string>
    <string name="theVariable">the variable</string>
    <string name="editActorTrigger">Edit Actor Trigger</string>
    <string name="specificActor">the specific actor</string>
    <string name="anyActorWithTheClass">any actor with the class</string>
    <string name="editRegionTrigger">Edit Region Trigger</string>
    <string name="anyActor">any actor</string>
    <string name="theHero">the hero</string>
    <string name="theRegion">the region</string>
    <string name="addEvents">Add Event</string>
    <string name="category">Category:</string>
    <string name="objects">Objects</string>
    <string name="addObject">Add Object</string>
    <string name="editObject">Edit Object</string>
    <string name="zoom">Zoom:</string>
    <string name="contacts">Contacts:</string>
    <string name="editUI">Edit User Interface</string>
    <string name="ui">User Interface</string>
    <string name="defaultAction">Default Action</string>
    <string name="editUITrigger">Edit UI Trigger</string>
    <string name="theButton">the Button</string>
    <string name="theJoystick">the Joystick</string>
    <string name="touchesTheScreen">the Screen</string>
    <string name="uiEventTriggered">The event is triggered when:</string>
    <string name="isTapped">is tapped</string>
    <string name="isPressed">is pressed</string>
    <string name="isHeld">is held</string>
    <string name="isReleased">is released</string>
    <string name="isMoved">is dragged</string>
    <string name="anyObject">any object</string>
    <string name="editActorObjectTrigger">Edit Actor/Object Trigger</string>
    <string name="map">Map</string>
    <string name="editBackground">Edit Background</string>
    <string name="sky">Sky</string>
    <string name="ground">Ground</string>
    <string name="decorations">Decorations</string>
    <string name="decorationsUnused">Decorations (unused)</string>
    <string name="preview">Preview:</string>
    <string name="leftArrow">&lt;--</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="editMapSize">Edit Map Size</string>
    <string name="empty"></string>
    <string name="editTileset">Edit Tileset</string>
    <string name="behaviors">Behaviors</string>
    <string name="myBehaviors">My Behaviors</string>
    <string name="type">Type:</string>
    <string name="editBehavior">Edit Behavior</string>
    <string name="variables">Variables:</string>
    <string name="switches">Switches:</string>
    <string name="parameters">Parameters:</string>
    <string name="events_colon">Events:</string>
    <string name="value">Value:</string>
    <string name="startValue">Start Value:</string>
    <string name="switch_">Switch</string>
    <string name="variable">Variable</string>
    <string name="test">Test</string>
    <string name="editHorizon">Edit Horizon</string>
    <string name="editMidground">Edit Midground</string>
    <string name="used">Used:</string>
    <string name="unused">Unused:</string>
    <string name="add">Add</string>
    <string name="editSize">Edit Size</string>
    <string name="dragToScale">Drag to scale:</string>
    <string name="scale">Scale:</string>
    <string name="density">Density:</string>
    <string name="collidesWith">Collides With:</string>
    <string name="hero">Hero</string>
    <string name="theGround">The Ground</string>
    <string name="edit_c">Edit:</string>
    <string name="background">Background</string>
    <string name="midground">Midground</string>
    <string name="size">Size</string>
    <string name="horizon">Horizon</string>
    <string name="tileset">Tileset</string>
</resources>
