<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/tableLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/editActor"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="100dip"
                            android:layout_height="wrap_content"
                            android:text="@string/actorName" />

                        <EditText
                            android:id="@+id/editTextActorName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/actorImage" />

                        <edu.elon.honors.price.maker.SelectorActorImage
                            android:id="@+id/spinnerActorImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed" />

                        <SeekBar
                            android:id="@+id/seekBarSpeed"
                            android:layout_width="150dip"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jump Height:" />

                        <SeekBar
                            android:id="@+id/seekBarJump"
                            android:layout_width="150dip"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Event:" />

                        <Spinner
                            android:id="@+id/spinnerEvent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Direction:"
                            android:visibility="invisible" />

                        <Spinner
                            android:id="@+id/spinnerDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="invisible" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Behavior:" />

                        <Spinner
                            android:id="@+id/spinnerBehavior"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>
                </TableLayout>

                <edu.elon.honors.price.maker.SelectorBehaviorInstances
                    android:id="@+id/selectorBehaviorInstances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </edu.elon.honors.price.maker.SelectorBehaviorInstances>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/ok" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>